--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@
 # should be updated accordingly.
 
 # Drizzle
-DATABASE_URL="postgresql://postgres:password@localhost:5432/second-t3"
+DATABASE_URL="postgresql://postgres:password@localhost:5432/first-t3"
 
 # Example:
 # SERVERVAR="foo"
